tests/machine/x/c/python_auto.error
line: 0
error: output mismatch
-- got --
4
366158144
-- want --
4
3.141592653589793
   1: #include <stdio.h>
