tests/machine/x/c/python_auto.c
#include <stdio.h>
#include <stdlib.h>

int main() {
  printf("%d\n", 4);
  printf("%d\n", 3.141592653589793);
  return 0;
}
